# routing-optimizer

./: CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  Trying_to_get_disjunction_to_be_more_tied_to_time.patch  cloudbuild.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  phocus.rst
notebooks/: optimization_exploration.ipynb  transform_start_and_end_locations.ipynb
notebooks/.ipynb_checkpoints/: modify_test_data-checkpoint.ipynb  optimization_exploration-checkpoint.ipynb  transform_start_and_end_locations-checkpoint.ipynb
output/: Candice.Routing.2018.json  Elena.Routing.2018.json  distance.json  formatted_elena.json
output/solutions/: mip-2018-10-22T22.29.40-Sam Solution.json  mip-2018-10-22T22.31.13-Sam Solution.json  mip-2018-10-22T22.33.38-Sam Solution.json  mip-2018-10-22T22.35.44-Sam Solution.json  mip-2018-10-22T22.36.38-Sam Solution.json  mip-2018-10-22T22.37.15-Sam Solution.json  mip-2018-10-22T22.38.17-Sam Solution.json  mip-2018-10-22T22.40.21-Sam Solution.json  mip-2018-10-22T22.42.54-Sam Solution.json  mip-2018-10-22T22.45.31-Sam Solution.json  mip-2018-10-22T22.47.11-Sam Solution.json  mip-2018-10-22T22.52.36-Sam Solution.json  mip-2018-10-22T22.56.03-Sam Solution.json  mip-2018-10-22T22.56.46-Sam Solution.json  mip-2018-10-22T22.58.04-Sam Solution.json  mip-2018-10-22T23.04.26-Sam Solution.json  mip-2018-10-22T23.32.58-Sam Solution.json  mip-2018-10-22T23.41.45-Sam Solution.json  mip-2018-10-22T23.53.12-Sam Solution.json  (+90 more)
tests/: .coverage  conftest.py
(+348 files in other folders)
