[tool.poetry]
name = "optimizer"
version = "0.1.0"
description = "Phocus Optimizer"
authors = ["Michael Shuffett <michael@quantcollective.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^6.7"
pandas = "^0.21"
boto3 = "^1.5"
numpy = "^1.13"
ortools = "^6.7"
googlemaps = "^3.0"
colorlover = "^0.2.1"
pendulum = "^2.0"
jsonpickle = "^0.9.6"
joblib = "^0.12.0"
tenacity = "^4.12"
progressbar2 = "^3.38"
connexion = "^1.4"
dataclasses = "^0.6.0"
fn = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pytest-cov = "^2.5"
pytest-xdist = "^1.22"
